readme update and changed input type month and year

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                 <div class="form-group-date">
                   <label for="date">Exp. data (MM/YY)</label>
                   <div class="form-group">
-                    <input type="month" placeholder="MM" class="input-month" />
-                    <input type="year" placeholder="YY" class="input-year" />
+                    <input type="text" placeholder="MM" class="input-month" />
+                    <input type="text" placeholder="YY" class="input-year" />
                     <small></small>
                   </div>
                 </div>
