added id to month and year input

--- a/index.html
+++ b/index.html
@@ -103,8 +103,18 @@
                 <div class="form-group-date">
                   <label for="date">Exp. data (MM/YY)</label>
                   <div class="form-group">
-                    <input type="text" placeholder="MM" class="input-month" />
-                    <input type="text" placeholder="YY" class="input-year" />
+                    <input
+                      type="text"
+                      id="date"
+                      placeholder="MM"
+                      class="input-month"
+                    />
+                    <input
+                      id="date"
+                      type="text"
+                      placeholder="YY"
+                      class="input-year"
+                    />
                     <small></small>
                   </div>
                 </div>
